1221第一次提交

--- a/index.html
+++ b/index.html
@@ -3968,7 +3968,9 @@
             });
         }())
     </script> -->
+    <script src="./js/tools.js"></script>
     <script src="./js/index.js"></script>
+
 </body>
 
 </html>
