--- a/note.html
+++ b/note.html
@@ -11,6 +11,7 @@
         // document.querySelector 和 document.querySelectorAll区别
         //获取元素时获取到的id对应多个元素如user_tab_menu对应多个li的id会获取失败
         //事件委托中顶部导航栏的写法
+        //面向对象写法
     </script>
 </body>
 </html>
