--- a/login.html
+++ b/login.html
@@ -13,8 +13,7 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/login.css">
-    <script src="js/jquery-3.5.1.min.js"></script>
-    <script src="js/login.js"></script>
+
 </head>
 
 <body>
@@ -54,7 +53,7 @@
                 <div class="login_tab">
                     <h2 class="cure" id="saoma">扫码登录</h2>
                     <span>|</span>
-                    <h2 id="zhanghu">账户登录</h2>
+                    <h2 id="account">账户登录</h2>
                 </div>
                 <div class="login_tab_item">
                     <div class="saoma">
@@ -156,6 +155,8 @@
         </div>
     </footer>
     <!-- 底部模块 end -->
+    <script src="js/tools.js"></script>
+    <script src="js/login.js"></script>
 </body>
 
 </html>
