--- a/shop_goods.html
+++ b/shop_goods.html
@@ -13,8 +13,7 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/shop_goods.css">
-    <script src="js/jquery-3.5.1.min.js"></script>
-    <script src="js/shop_goods.js"></script>
+    
 </head>
 
 <body>
@@ -26,7 +25,7 @@
             </div>
 
             <div class="location">
-                <span class="local_name">山西</span>
+                <span class="local_name">四川</span>
                 <div class="loca">
                     <ul class="loca_items">
                         <li>北京</li>
@@ -34,7 +33,7 @@
                         <li>天津</li>
                         <li>重庆</li>
                         <li>河北</li>
-                        <li class="red_loc">山西</li>
+                        <li>山西</li>
                         <li>河南</li>
                         <li>辽宁</li>
                         <li>吉林</li>
@@ -50,7 +49,7 @@
                         <li>广东</li>
                         <li>广西</li>
                         <li>江西</li>
-                        <li>四川</li>
+                        <li class="red_loc">四川</li>
                         <li>海南</li>
                         <li>贵州</li>
                         <li>云南</li>
@@ -719,24 +718,25 @@
                 <img src="images/shop_goods/product_details/mid/3.jpg" alt="" class="mid_img">
                 <img src="images/shop_goods/product_details/mid/4.jpg" alt="" class="mid_img">
                 <img src="images/shop_goods/product_details/mid/5.jpg" alt="" class="mid_img">
-                <img src="images/shop_goods/product_details/mid/6.jpg" alt="" class="mid_img">
+                <!-- <img src="images/shop_goods/product_details/mid/6.jpg" alt="" class="mid_img">
                 <img src="images/shop_goods/product_details/mid/7.jpg" alt="" class="mid_img">
                 <img src="images/shop_goods/product_details/mid/8.jpg" alt="" class="mid_img">
                 <img src="images/shop_goods/product_details/mid/9.jpg" alt="" class="mid_img">
-                <img src="images/shop_goods/product_details/mid/10.jpg" alt="" class="mid_img">
+                <img src="images/shop_goods/product_details/mid/10.jpg" alt="" class="mid_img"> -->
+                
                 <div class="mask"></div>
                 <div class="fajing"></div>
                 <div class="big_photo">
-                    <img src="images/shop_goods/product_details/big/1.jpg" alt="" class="big_img" style="display: block;">
+                    <img src="images/shop_goods/product_details/big/1.jpg" alt="" class="big_img showimg" style="display: block;">
                     <img src="images/shop_goods/product_details/big/2.jpg" alt="" class="big_img">
                     <img src="images/shop_goods/product_details/big/3.jpg" alt="" class="big_img">
                     <img src="images/shop_goods/product_details/big/4.jpg" alt="" class="big_img">
                     <img src="images/shop_goods/product_details/big/5.jpg" alt="" class="big_img">
-                    <img src="images/shop_goods/product_details/big/6.jpg" alt="" class="big_img">
+                    <!-- <img src="images/shop_goods/product_details/big/6.jpg" alt="" class="big_img">
                     <img src="images/shop_goods/product_details/big/7.jpg" alt="" class="big_img">
                     <img src="images/shop_goods/product_details/big/8.jpg" alt="" class="big_img">
                     <img src="images/shop_goods/product_details/big/9.jpg" alt="" class="big_img">
-                    <img src="images/shop_goods/product_details/big/10.jpg" alt="" class="big_img">
+                    <img src="images/shop_goods/product_details/big/10.jpg" alt="" class="big_img"> -->
                 </div>
             </div>
             <div class="preview_list">
@@ -759,7 +759,7 @@
                             <img src="images/shop_goods/product_details/little/5.jpg" alt="">
                         </li>
                     </div>
-                    <div class="list_item_menu">
+                    <!-- <div class="list_item_menu">
                         <li>
                             <img src="images/shop_goods/product_details/little/6.jpg" alt="">
                         </li>
@@ -775,7 +775,7 @@
                         <li>
                             <img src="images/shop_goods/product_details/little/10.jpg" alt="">
                         </li>
-                    </div>
+                    </div> -->
 
                 </ul>
                 <input type="button" value="" class="arrow_next">
@@ -1220,6 +1220,9 @@
         </ul>
     </footer>
     <!-- 底部模块 end -->
+
+    <script src="./js/tools.js"></script>
+    <script src="./js/shop_goods.js"></script>
 </body>
 
 </html>
