1223第一次提交

--- a/index.html
+++ b/index.html
@@ -938,70 +938,70 @@
                 <li>
                     <img src="uploads/zhuli/1_1.jpg!cc_130x130.webp " alt=" ">
                     <div class="goods_msg ">
-                        <h4>尾款24期免息</h4>
+                        <h4>加入购物车</h4>
                     </div>
                     <p>电脑数码</p>
                 </li>
                 <li>
                     <img src="uploads/zhuli/1_2.jpg!cc_130x130.webp " alt=" ">
                     <div class="goods_msg ">
-                        <h4>尾款24期免息</h4>
+                        <h4>加入购物车</h4>
                     </div>
                     <p>电脑数码</p>
                 </li>
                 <li>
                     <img src="uploads/zhuli/1_3.jpg!cc_130x130.webp " alt=" ">
                     <div class="goods_msg ">
-                        <h4>尾款24期免息</h4>
+                        <h4>加入购物车</h4>
                     </div>
                     <p>电脑数码</p>
                 </li>
                 <li>
                     <img src="uploads/zhuli/1_4.jpg!cc_130x130.webp " alt=" ">
                     <div class="goods_msg ">
-                        <h4>尾款24期免息</h4>
+                        <h4>加入购物车</h4>
                     </div>
                     <p>电脑数码</p>
                 </li>
                 <li>
                     <img src="uploads/zhuli/1_5.jpg!cc_130x130.webp " alt=" ">
                     <div class="goods_msg ">
-                        <h4>尾款24期免息</h4>
+                        <h4>加入购物车</h4>
                     </div>
                     <p>电脑数码</p>
                 </li>
                 <li>
                     <img src="uploads/zhuli/2_1.png!cc_130x130.webp " alt=" ">
                     <div class="goods_msg ">
-                        <h4>尾款24期免息</h4>
+                        <h4>加入购物车</h4>
                     </div>
                     <p>电脑数码</p>
                 </li>
                 <li>
                     <img src="uploads/zhuli/2_2.jpg!cc_130x130.webp " alt=" ">
                     <div class="goods_msg ">
-                        <h4>尾款24期免息</h4>
+                        <h4>加入购物车</h4>
                     </div>
                     <p>电脑数码</p>
                 </li>
                 <li>
                     <img src="uploads/zhuli/2_3.jpg!cc_130x130.webp " alt=" ">
                     <div class="goods_msg ">
-                        <h4>尾款24期免息</h4>
+                        <h4>加入购物车</h4>
                     </div>
                     <p>电脑数码</p>
                 </li>
                 <li>
                     <img src="uploads/zhuli/2_4.jpg!cc_130x130.webp " alt=" ">
                     <div class="goods_msg ">
-                        <h4>尾款24期免息</h4>
+                        <h4>加入购物车</h4>
                     </div>
                     <p>电脑数码</p>
                 </li>
                 <li>
                     <img src="uploads/zhuli/2_5.jpg!cc_130x130.webp " alt=" ">
                     <div class="goods_msg ">
-                        <h4>尾款24期免息</h4>
+                        <h4>加入购物车</h4>
                     </div>
                     <p>电脑数码</p>
                 </li>
@@ -1791,15 +1791,16 @@
     <!-- 为你推荐 商品列表 start -->
     <div class="for_you_tab" style="display: block; ">
         <ul class="for_you_goodslist w ">
-            <li>
-                <img src="uploads/for_you_goodslist/1.jpg.webp " alt=" ">
+            <!-- <li>
+                <img src="uploads/for_you_goodslist/2/1.jpg.webp " alt=" ">
                 <div class="goods_msg ">
                     <h4 class="googs_title two_row ">
-                        <span class="ziying ">自营</span> 欧迪芬无痕内衣女薄款文胸2021春夏黑科技减压专利抗菌凉感透气侧收副乳调整型胸罩大胸奶罩XJ1201
+                         欧迪芬无痕耳机薄款2021春夏黑科技减压专利抗菌凉感透气侧哎呀上上下下闪现随便XJ1201
                     </h4>
                     <div class="price ">
                         <i>￥</i>1999.<i>00</i>
                     </div>
+                    <a  href="#none" class="nomean" onclick="addCart()">加入购物车</a>
                     <div class="lookfor_sim ">
                         <div class="xiangsi ">找相似</div>
                     </div>
@@ -1816,6 +1817,7 @@
                     <div class="price ">
                         <i>￥</i>31.<i>00</i>
                     </div>
+                    <a href="#none" class="nomean" onclick="addCart()">加入购物车</a>
                     <div class="lookfor_sim ">
                         <div class="xiangsi ">找相似</div>
                     </div>
@@ -1832,6 +1834,7 @@
                     <div class="price ">
                         <i>￥</i>119.<i>00</i>
                     </div>
+                    <a  href="#none" class="nomean" onclick="addCart()">加入购物车</a>
                     <div class="lookfor_sim ">
                         <div class="xiangsi ">找相似</div>
                     </div>
@@ -1848,6 +1851,7 @@
                     <div class="price ">
                         <i>￥</i>3685.<i>00</i>
                     </div>
+                    <a  href="#none" class="nomean" onclick="addCart()">加入购物车</a>
                     <div class="lookfor_sim ">
                         <div class="xiangsi ">找相似</div>
                     </div>
@@ -1864,6 +1868,7 @@
                     <div class="price ">
                         <i>￥</i>188.<i>00</i>
                     </div>
+                    <a  href="#none" class="nomean" onclick="addCart()">加入购物车</a>
                     <div class="lookfor_sim ">
                         <div class="xiangsi ">找相似</div>
                     </div>
@@ -1880,6 +1885,7 @@
                     <div class="price ">
                         <i>￥</i>71.<i>00</i>
                     </div>
+                    <a  href="#none" class="nomean" onclick="addCart()">加入购物车</a>
                     <div class="lookfor_sim ">
                         <div class="xiangsi ">找相似</div>
                     </div>
@@ -1895,6 +1901,7 @@
                     <div class="price ">
                         <i>￥</i>258.<i>00</i>
                     </div>
+                    <a  href="#none" class="nomean" onclick="addCart()">加入购物车</a>
                     <div class="lookfor_sim ">
                         <div class="xiangsi ">找相似</div>
                     </div>
@@ -1911,6 +1918,7 @@
                     <div class="price ">
                         <i>￥</i>134.<i>00</i>
                     </div>
+                    <a  href="#none" class="nomean" onclick="addCart()">加入购物车</a>
                     <div class="lookfor_sim ">
                         <div class="xiangsi ">找相似</div>
                     </div>
@@ -1927,6 +1935,7 @@
                     <div class="price ">
                         <i>￥</i>440.<i>00</i>
                     </div>
+                    <a  href="#none" class="nomean" onclick="addCart()">加入购物车</a>
                     <div class="lookfor_sim ">
                         <div class="xiangsi ">找相似</div>
                     </div>
@@ -1943,171 +1952,13 @@
                     <div class="price ">
                         <i>￥</i>103.<i>50</i>
                     </div>
+                    <a  href="#none" class="nomean" onclick="addCart()">加入购物车</a>
                     <div class="lookfor_sim ">
                         <div class="xiangsi ">找相似</div>
                     </div>
                 </div>
 
-            </li>
-            <li>
-                <img src="uploads/for_you_goodslist/1.jpg.webp " alt=" ">
-                <div class="goods_msg ">
-                    <h4 class="googs_title two_row ">
-                        <span class="ziying ">自营</span> 欧迪芬无痕内衣女薄款文胸2021春夏黑科技减压专利抗菌凉感透气侧收副乳调整型胸罩大胸奶罩XJ1201
-                    </h4>
-                    <div class="price ">
-                        <i>￥</i>1999.<i>00</i>
-                    </div>
-                    <div class="lookfor_sim ">
-                        <div class="xiangsi ">找相似</div>
-                    </div>
-                </div>
-
-            </li>
-
-            <li>
-                <img src="uploads/for_you_goodslist/2.jpg.webp " alt=" ">
-                <div class="goods_msg ">
-                    <h4 class="googs_title two_row ">
-                        麦饭石奶锅不粘锅家用宿舍婴儿泡面汤锅宝宝辅食锅 特惠款14CM不粘单锅无盖
-                    </h4>
-                    <div class="price ">
-                        <i>￥</i>31.<i>00</i>
-                    </div>
-                    <div class="lookfor_sim ">
-                        <div class="xiangsi ">找相似</div>
-                    </div>
-                </div>
-
-            </li>
-
-            <li>
-                <img src="uploads/for_you_goodslist/3.jpg.webp " alt=" ">
-                <div class="goods_msg ">
-                    <h4 class="googs_title two_row ">
-                        【品牌官方直营】RASTACLAT小狮子浪花系列 SANRIKU 海岸 经典款 嘻哈男女情侣鞋带手链 经典款海岸
-                    </h4>
-                    <div class="price ">
-                        <i>￥</i>119.<i>00</i>
-                    </div>
-                    <div class="lookfor_sim ">
-                        <div class="xiangsi ">找相似</div>
-                    </div>
-                </div>
-
-            </li>
-
-            <li>
-                <img src="uploads/for_you_goodslist/4.jpg.webp " alt=" ">
-                <div class="goods_msg ">
-                    <h4 class="googs_title two_row ">
-                        纯手工新款精品苏州刺绣画苏绣成品挂画玄关50100年年有余 加框画芯72*125cm 平针绣
-                    </h4>
-                    <div class="price ">
-                        <i>￥</i>3685.<i>00</i>
-                    </div>
-                    <div class="lookfor_sim ">
-                        <div class="xiangsi ">找相似</div>
-                    </div>
-                </div>
-
-            </li>
-
-            <li>
-                <img src="uploads/for_you_goodslist/5.jpg.webp " alt=" ">
-                <div class="goods_msg ">
-                    <h4 class="googs_title two_row ">
-                        木.林.森男鞋夏季新品时尚复古潮流商务休闲鞋百搭低帮鞋子男小白鞋简约板鞋男防滑舒适耐磨透气轻便小皮鞋 Y301黑色 41
-                    </h4>
-                    <div class="price ">
-                        <i>￥</i>188.<i>00</i>
-                    </div>
-                    <div class="lookfor_sim ">
-                        <div class="xiangsi ">找相似</div>
-                    </div>
-                </div>
-
-            </li>
-
-            <li>
-                <img src="uploads/for_you_goodslist/6.jpg.webp " alt=" ">
-                <div class="goods_msg ">
-                    <h4 class="googs_title two_row ">
-                        筷子家用家庭防滑筷子分用耐高温不发霉一人一色钛防霉10合金 炫彩 花开富贵5色各2双 10双装
-                    </h4>
-                    <div class="price ">
-                        <i>￥</i>71.<i>00</i>
-                    </div>
-                    <div class="lookfor_sim ">
-                        <div class="xiangsi ">找相似</div>
-                    </div>
-                </div>
-
-            </li>
-            <li>
-                <img src="uploads/for_you_goodslist/7.jpg.webp " alt=" ">
-                <div class="goods_msg ">
-                    <h4 class="googs_title two_row ">
-                        ColaivKloia官网 情侣戒指男女对戒黑白钻戒简约时尚306七夕情人节礼物送男女友 JZ0306黑色钻戒+皮绳 美号10号
-                    </h4>
-                    <div class="price ">
-                        <i>￥</i>258.<i>00</i>
-                    </div>
-                    <div class="lookfor_sim ">
-                        <div class="xiangsi ">找相似</div>
-                    </div>
-                </div>
-
-            </li>
-
-            <li>
-                <img src="uploads/for_you_goodslist/8.jpg.webp " alt=" ">
-                <div class="goods_msg ">
-                    <h4 class="googs_title two_row ">
-                        复古相框摆台创意欧式7寸6寸10寸金属摆件挂墙像框架可加冲洗照片6660 银色(米兰秋天) 6寸横竖两用
-                    </h4>
-                    <div class="price ">
-                        <i>￥</i>134.<i>00</i>
-                    </div>
-                    <div class="lookfor_sim ">
-                        <div class="xiangsi ">找相似</div>
-                    </div>
-                </div>
-
-            </li>
-
-            <li>
-                <img src="uploads/for_you_goodslist/9.jpg.webp " alt=" ">
-                <div class="goods_msg ">
-                    <h4 class="googs_title two_row ">
-                        <span class="ziying ">自营</span> anello日本离家出走包男女双肩包电脑隔层背包2021上新乐天包书包ATB0193R红蓝白
-                    </h4>
-                    <div class="price ">
-                        <i>￥</i>440.<i>00</i>
-                    </div>
-                    <div class="lookfor_sim ">
-                        <div class="xiangsi ">找相似</div>
-                    </div>
-                </div>
-
-            </li>
-
-            <li>
-                <img src="uploads/for_you_goodslist/10.jpg.webp " alt=" ">
-                <div class="goods_msg ">
-                    <h4 class="googs_title two_row ">
-                        励志标语墙贴纸文字会议办公室装饰激励公司企业团队文化墙面布置ljm 2785标语整套竖版- 黑色+大红+白 小
-                    </h4>
-                    <div class="price ">
-                        <i>￥</i>103.<i>50</i>
-                    </div>
-                    <div class="lookfor_sim ">
-                        <div class="xiangsi ">找相似</div>
-                    </div>
-                </div>
-
-            </li>
-
+            </li> -->
         </ul>
     </div>
 
@@ -2117,7 +1968,7 @@
                 <img src="uploads/for_you_goodslist/2/1.jpg.webp " alt=" ">
                 <div class="goods_msg ">
                     <h4 class="googs_title two_row ">
-                        <span class="ziying ">自营</span> 欧迪芬无痕内衣女薄款文胸2021春夏黑科技减压专利抗菌凉感透气侧收副乳调整型胸罩大胸奶罩XJ1201
+                         欧迪芬无痕内衣女薄款文胸2021春夏黑科技减压专利抗菌凉感透气侧收副乳调整型胸罩大胸奶罩XJ1201
                     </h4>
                     <div class="price ">
                         <i>￥</i>1999.<i>00</i>
@@ -2272,7 +2123,7 @@
 
             </li>
 
-            <li>
+            <!-- <li>
                 <img src="uploads/for_you_goodslist/2/1.jpg.webp " alt=" ">
                 <div class="goods_msg ">
                     <h4 class="googs_title two_row ">
@@ -2429,7 +2280,7 @@
                     </div>
                 </div>
 
-            </li>
+            </li> -->
 
         </ul>
     </div>
@@ -2667,6 +2518,7 @@
                     <div class="price ">
                         <i>￥</i>188.<i>00</i>
                     </div>
+                    <span>加入购物车</span>
                     <div class="lookfor_sim ">
                         <div class="xiangsi ">找相似</div>
                     </div>
