--- a/shopcart.html
+++ b/shopcart.html
@@ -10,11 +10,10 @@
     <link rel="icon" href="images/favicon.ico" mce_href="//www.jd.com/favicon.ico" type="image/x-icon" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="renderer" content="webkit" />
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/shopcar.css">
-    <script src="js/jquery-3.5.1.min.js"></script>
-    <script src="js/shopcar.js"></script>
+    <link rel="stylesheet" href="./css/base.css">
+    <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="./css/shopcart.css">
+    
 </head>
 
 <body>
@@ -26,7 +25,7 @@
             </div>
 
             <div class="location">
-                <span class="local_name">山西</span>
+                <span class="local_name">四川</span>
                 <div class="loca">
                     <ul class="loca_items">
                         <li>北京</li>
@@ -312,11 +311,11 @@
                 <!-- 商品详细模块 -->
                 <div class="cart-item-list">
                     <div class="shop_list">
-                        <div class="goods_store">
+                        <!-- <div class="goods_store">
                             <input type="checkbox" name="" id="" class="store-checkbox">
                             <a href="javascript:;">曼诺蒂数码专营店</a>
                             <a href="https://jdcs.jd.com/jdchat/index.action?entry=cart_shop&venderId=211780"><img src="images/shopcar_kefu.png" alt=""></a>
-                        </div>
+                        </div> -->
                         <div class="cart-item check-cart-item">
                             <div class="p-checkbox">
                                 <input type="checkbox" name="" id="" checked class="j-checkbox">
@@ -364,11 +363,11 @@
                     </div>
 
                     <div class="shop_list">
-                        <div class="goods_store">
+                        <!-- <div class="goods_store">
                             <input type="checkbox" name="" id="" class="store-checkbox">
                             <a href="javascript:;">铭枫数码专营店</a>
                             <a href="https://jdcs.jd.com/jdchat/index.action?entry=cart_shop&venderId=211780"><img src="images/shopcar_kefu.png" alt=""></a>
-                        </div>
+                        </div> -->
                         <div class="cart-item">
                             <div class="p-checkbox">
                                 <input type="checkbox" name="" id="" class="j-checkbox">
@@ -394,11 +393,11 @@
                     </div>
 
                     <div class="shop_list">
-                        <div class="goods_store">
+                        <!-- <div class="goods_store">
                             <input type="checkbox" name="" id="" class="store-checkbox">
                             <a href="javascript:;">金士顿京东自营旗舰店</a>
                             <a href="https://jdcs.jd.com/jdchat/index.action?entry=cart_shop&venderId=211780"><img src="images/shopcar_kefu.png" alt=""></a>
-                        </div>
+                        </div> -->
                         <div class="cart-item">
                             <div class="p-checkbox">
                                 <input type="checkbox" name="" id="" class="j-checkbox">
@@ -424,11 +423,11 @@
                     </div>
 
                     <div class="shop_list">
-                        <div class="goods_store">
+                        <!-- <div class="goods_store">
                             <input type="checkbox" name="" id="" class="store-checkbox">
                             <a href="javascript:;">宝马运通兴宝专卖店</a>
                             <a href="https://jdcs.jd.com/jdchat/index.action?entry=cart_shop&venderId=211780"><img src="images/shopcar_kefu.png" alt=""></a>
-                        </div>
+                        </div> -->
                         <div class="cart-item">
                             <div class="p-checkbox">
                                 <input type="checkbox" name="" id="" class="j-checkbox">
@@ -722,6 +721,8 @@
         </div>
     </footer>
     <!-- 底部模块 end -->
+    <script src="./js/tools.js"></script>
+    <script src="./js/shopcart.js"></script>
 </body>
 
 </html>
