1223第二次提交

--- a/shopcart.html
+++ b/shopcart.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/shopcart.css">
+    <script src="./js/jquery-2.2.4.js"></script>
+    <script type="text/javascript" src="./layer-master/src/layer.js"></script>
     
 </head>
 
@@ -310,13 +312,8 @@
                 </div>
                 <!-- 商品详细模块 -->
                 <div class="cart-item-list">
-                    <div class="shop_list">
-                        <!-- <div class="goods_store">
-                            <input type="checkbox" name="" id="" class="store-checkbox">
-                            <a href="javascript:;">曼诺蒂数码专营店</a>
-                            <a href="https://jdcs.jd.com/jdchat/index.action?entry=cart_shop&venderId=211780"><img src="images/shopcar_kefu.png" alt=""></a>
-                        </div> -->
-                        <div class="cart-item check-cart-item">
+                      <div class="shop_list">
+                        <!-- <div class="cart-item check-cart-item">
                             <div class="p-checkbox">
                                 <input type="checkbox" name="" id="" checked class="j-checkbox">
                             </div>
@@ -337,7 +334,8 @@
                             </div>
                             <div class="p-sum">￥999.00</div>
                             <div class="p-action"><a href="javascript:;" class="p-action_x">删除</a><br><a href="javascript:;">移入关注</a></div>
-                        </div>
+                        </div> -->
+<!-- 
                         <div class="cart-item">
                             <div class="p-checkbox">
                                 <input type="checkbox" name="" id="" class="j-checkbox">
@@ -359,120 +357,8 @@
                             </div>
                             <div class="p-sum">￥7799.00</div>
                             <div class="p-action"><a href="javascript:;" class="p-action_x">删除</a><br><a href="javascript:;">移入关注</a></div>
-                        </div>
-                    </div>
-
-                    <div class="shop_list">
-                        <!-- <div class="goods_store">
-                            <input type="checkbox" name="" id="" class="store-checkbox">
-                            <a href="javascript:;">铭枫数码专营店</a>
-                            <a href="https://jdcs.jd.com/jdchat/index.action?entry=cart_shop&venderId=211780"><img src="images/shopcar_kefu.png" alt=""></a>
                         </div> -->
-                        <div class="cart-item">
-                            <div class="p-checkbox">
-                                <input type="checkbox" name="" id="" class="j-checkbox">
-                            </div>
-                            <div class="p-goods">
-                                <div class="p-img">
-                                    <img src="uploads/shop_car/3.jpg" alt="">
-                                </div>
-                                <div class="p-msg two_row">Lenovo/联想 ssd固态硬盘 笔记本台式机一体机升级加装 SATA3/M.2/MSATA X800 M.2 2242 NGFF 128G</div>
-                                <div class="p_taocan">X800 M.2 2242 NGFF 128G</div>
-                            </div>
-                            <div class="p-price">￥250.00</div>
-                            <div class="p-num">
-                                <div class="quantity-form">
-                                    <a href="javascript:;" class="decrement">-</a>
-                                    <input type="text" class="itxt" value="1">
-                                    <a href="javascript:;" class="increment">+</a>
-                                </div>
-                            </div>
-                            <div class="p-sum">￥250.00</div>
-                            <div class="p-action"><a href="javascript:;" class="p-action_x">删除</a><br><a href="javascript:;">移入关注</a></div>
-                        </div>
-                    </div>
-
-                    <div class="shop_list">
-                        <!-- <div class="goods_store">
-                            <input type="checkbox" name="" id="" class="store-checkbox">
-                            <a href="javascript:;">金士顿京东自营旗舰店</a>
-                            <a href="https://jdcs.jd.com/jdchat/index.action?entry=cart_shop&venderId=211780"><img src="images/shopcar_kefu.png" alt=""></a>
-                        </div> -->
-                        <div class="cart-item">
-                            <div class="p-checkbox">
-                                <input type="checkbox" name="" id="" class="j-checkbox">
-                            </div>
-                            <div class="p-goods">
-                                <div class="p-img">
-                                    <img src="uploads/shop_car/4.jpg" alt="">
-                                </div>
-                                <div class="p-msg two_row">金士顿(Kingston) 480GB SSD固态硬盘 SATA3.0接口 A400系列</div>
-                                <div class="p_taocan">★A400★热销爆款</div>
-                            </div>
-                            <div class="p-price">￥349.00</div>
-                            <div class="p-num">
-                                <div class="quantity-form">
-                                    <a href="javascript:;" class="decrement">-</a>
-                                    <input type="text" class="itxt" value="1">
-                                    <a href="javascript:;" class="increment">+</a>
-                                </div>
-                            </div>
-                            <div class="p-sum">￥349.00</div>
-                            <div class="p-action"><a href="javascript:;" class="p-action_x">删除</a><br><a href="javascript:;">移入关注</a></div>
-                        </div>
-                    </div>
-
-                    <div class="shop_list">
-                        <!-- <div class="goods_store">
-                            <input type="checkbox" name="" id="" class="store-checkbox">
-                            <a href="javascript:;">宝马运通兴宝专卖店</a>
-                            <a href="https://jdcs.jd.com/jdchat/index.action?entry=cart_shop&venderId=211780"><img src="images/shopcar_kefu.png" alt=""></a>
-                        </div> -->
-                        <div class="cart-item">
-                            <div class="p-checkbox">
-                                <input type="checkbox" name="" id="" class="j-checkbox">
-                            </div>
-                            <div class="p-goods">
-                                <div class="p-img">
-                                    <img src="uploads/shop_car/5.png!q70.png" alt="">
-                                </div>
-                                <div class="p-msg two_row">宝马BMW S1000RR 摩托车 黑色</div>
-                                <div class="p_taocan">黑色</div>
-                            </div>
-                            <div class="p-price">￥285999.00</div>
-                            <div class="p-num">
-                                <div class="quantity-form">
-                                    <a href="javascript:;" class="decrement">-</a>
-                                    <input type="text" class="itxt" value="1">
-                                    <a href="javascript:;" class="increment">+</a>
-                                </div>
-                            </div>
-                            <div class="p-sum">￥285999.00</div>
-                            <div class="p-action"><a href="javascript:;" class="p-action_x">删除</a><br><a href="javascript:;">移入关注</a></div>
-                        </div>
-                        <div class="cart-item">
-                            <div class="p-checkbox">
-                                <input type="checkbox" name="" id="" class="j-checkbox">
-                            </div>
-                            <div class="p-goods">
-                                <div class="p-img">
-                                    <img src="uploads/shop_car/6.jpg" alt="">
-                                </div>
-                                <div class="p-msg two_row">宝马BMW S1000RR 摩托车 鲁冰花蓝</div>
-                                <div class="p_taocan">鲁冰花蓝</div>
-                            </div>
-                            <div class="p-price">￥298999.00</div>
-                            <div class="p-num">
-                                <div class="quantity-form">
-                                    <a href="javascript:;" class="decrement">-</a>
-                                    <input type="text" class="itxt" value="1">
-                                    <a href="javascript:;" class="increment">+</a>
-                                </div>
-                            </div>
-                            <div class="p-sum">￥298999.00</div>
-                            <div class="p-action"><a href="javascript:;" class="p-action_x">删除</a><br><a href="javascript:;">移入关注</a></div>
-                        </div>
-                    </div>
+                    </div> 
                 </div>
 
                 <!-- 结算模块 -->
@@ -486,8 +372,8 @@
                             <a href="javascript:;" class="clear-all">清理购物车</a>
                         </div>
                         <div class="toolbar-right">
-                            <div class="amount-sum">已经选<em>1</em>件商品</div>
-                            <div class="price-sum">总价： <em>￥11112.60</em></div>
+                            <div class="amount-sum">已经选<em>0</em>件商品</div>
+                            <div class="price-sum">总价：<i>￥</i> <em>0.0</em></div>
                             <button class="btn-area">去结算</button>
                         </div>
                     </div>
@@ -723,6 +609,7 @@
     <!-- 底部模块 end -->
     <script src="./js/tools.js"></script>
     <script src="./js/shopcart.js"></script>
+   
 </body>
 
 </html>
