1223第三次提交

--- a/sign-up-two.html
+++ b/sign-up-two.html
@@ -31,7 +31,7 @@
                   <li><span>用 &nbsp户 &nbsp名</span><input type="text" placeholder="您的账户名和登录名" class="username"></li>
                   <p class="tip tip1"><span></span>用户名为4-16位数字字母下划线不能为空</p>
                   <li><span>设 置 密 码</span><input type="password" placeholder="建议使用两种或两种以上字符组合" class="password"></li>
-                  <p class="tip tip2"><span></span>密码不能为空</p>
+                  <p class="tip tip2"><span></span>密码最少6位包括数字大写、小写字母特殊符号</p>
                   <li><span>确 认 密 码</span><input type="password" placeholder="请再次输入密码" class="psw"></li>
                   <p class="tip tip3"><span></span>请确认密码</p>
                   <li><span>邮 箱 验 证</span><input type="text" placeholder="请输入邮箱" class="address"></li>
@@ -40,6 +40,7 @@
                   
               </ul> 
               <button>立即注册</button>
+              <p class="tip tip5"><span></span>用户已经存在</p>
 
            </form>          
             <ol>
