任务结束提交

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/index.css">
-    <!-- <script src="js/scroll.js"></script> -->
     <title>jd.京东购物</title>
 
 </head>
@@ -66,8 +65,8 @@
                 </div>
             </div>
             <div class="login">
-                <a href="https://passport.jd.com/new/login.aspx?ReturnUrl=https%3A%2F%2Fwww.jd.com%2F" class="user_login">你好，请登录</a>
-                <a href="https://reg.jd.com/reg/person?ReturnUrl=https%3A//www.jd.com/" class="register red">&nbsp;&nbsp;免费注册</a>
+                <a href="./login.html" class="user_login">你好，请登录</a>
+                <a href="./sign-up.html" class="register red">&nbsp;&nbsp;免费注册</a>
             </div>
             <ul class="user_tab_items">
                 <li class="shuxian">|</li>
@@ -296,7 +295,7 @@
             </div>
             <div class="shop_car">
                 <div class="num">6</div>
-                <span><a href="shopcar.html" class="red">我的购物车</a></span>
+                <span><a href="./shopcart.html" class="red">我的购物车</a></span>
             </div>
         </div>
         <div class="right_adimg"></div>
@@ -327,7 +326,7 @@
             </div>
             <div class="shop_car">
                 <div class="num"></div>
-                <span><a href="shopcar.html" class="red">我的购物车</a></span>
+                <span><a href="./shopcart.html" class="red">我的购物车</a></span>
             </div>
         </div>
     </header>
