--- a/sign-up.html
+++ b/sign-up.html
@@ -7,7 +7,7 @@
             <link rel="stylesheet" href="./css/base.css">
             <link rel="stylesheet" href="./css/common.css">
             <link rel="stylesheet" href="./css/register.css">
-            <link rel="stylesheet" href="./css/sign-up-two.css">    
+            <link rel="stylesheet" href="./css/sign-up.css">    
       </head>
       <body>
          <header class="icon_link">
@@ -22,12 +22,12 @@
 
          <main>
             <ul>
-                  <li class="c1"><span class="right one"></span><span class="green2 two">验证手机号</span></li>
-                  <li class="c2"><span class="green1 one">2</span><span class="green2 two">填写账号信息</span></li>
-                  <li class="c3"><span class="one">3</span><span class="two">注册成功</span></li>
+                  <li class="c2"><span class="green1 one"></span><span class="green2 two">填写账号信息</span></li>
             </ul>            
-           <form action="index.html">
+           <form action="">
               <ul>
+               <li><span>手 &nbsp机 &nbsp号</span><input type="text" placeholder="您的手机号码" class="phonenum"></li>
+               <p class="tip tip0"><span></span>手机号格式错误</p>
                   <li><span>用 &nbsp户 &nbsp名</span><input type="text" placeholder="您的账户名和登录名" class="username"></li>
                   <p class="tip tip1"><span></span>用户名为4-16位数字字母下划线不能为空</p>
                   <li><span>设 置 密 码</span><input type="password" placeholder="建议使用两种或两种以上字符组合" class="password"></li>
@@ -54,6 +54,6 @@
                   <p>Copyright © 2004-2020  京东JD.com 版权所有</p>
          </footer>
          <script src="./js/tools.js"></script>
-      <script src="./js/signup-two.js"></script>
+      <script src="./js/signup.js"></script>
       </body>
       </html>
