--- a/login.html
+++ b/login.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/login.css">
+    <script src="./js/jquery-2.2.4.js"></script>
+    <script type="text/javascript" src="./layer-master/src/layer.js"></script>
 
 </head>
 
@@ -93,7 +95,7 @@
                     <div class="wx"></div>
                     <a href="javascript:;">微信</a>
                     <div class="zhuce"></div>
-                    <a href="javascript:;" class="zhuce_link">立即注册</a>
+                    <a href="sign-up.html" class="zhuce_link">立即注册</a>
                 </div>
             </div>
         </div>
